--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "bun run build",
+  "outputDirectory": "dist",
+  "framework": null,
   "functions": {
-    "api/index.ts": {
-      "runtime": "@godsreveal/vercel-bun@0.2.4"
+    "api/**/*.ts": {
+      "runtime": "bun@1.1.20"
     }
   }
 }
